# Ironclad

./: .als.json  .editorconfig  .gitignore  .mailmap  .typos.toml  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  GNUmakefile.in  Makefile.in  README  README.md  RELEASE_PROCEDURE.md  SECURITY.md  autogen.sh  bootstrap  config.ads.in  configure.ac  configure.sh  install.sh  install.sh.in  ironclad.gpr  ironclad.gpr.in  rts.gpr  rts.gpr.in  version.sh
.forgejo/workflows/: ci.yml  spellcheck.yml
.github/workflows/: ci.yml  spellcheck.yml
docs/: cmdlineargs.md  contributing.md  ironclad.texi  syscalls.md  vfs.md
docs/syscalls/: alloc.md  close.md  cwd.md  exec.md  exit.md  fork.md  hostname.md  log.md  mmap.md  open.md  pid.md  preference.md  read.md  seek.md  set_tcb.md  stat.md  uname.md  wait.md  write.md
gprconfig/: compilers.xml.in  gprconfig.xml.in  linker.xml.in
scripts/: checkstack.pl
source/: alignment.adb  alignment.ads  atomic.ads  cmdline.adb  cmdline.ads  config.ads  config.ads.in  entrypoint.adb  entrypoint.ads  header.S  header.c  kernel_main.adb  kernel_main.ads  linker.ld  main.adb  main.ads  messages.adb  messages.ads  panic.adb  panic.ads  pragmas.adc  runtime.adb  runtime.ads  scheduler.adb  scheduler.ads  synchronization.adb  synchronization.ads  time.adb  time.ads  userland_transfer.adb  userland_transfer.ads
source/arch/: arch-acpi.adb  arch-acpi.ads  arch-apic.adb  arch-apic.ads  arch-clocks.ads  arch-context.ads  arch-cpu.adb  arch-cpu.ads  arch-cr.adb  arch-cr.ads  arch-debug.adb  arch-debug.ads  arch-gdt.adb  arch-gdt.ads  arch-hooks.ads  arch-hpet.adb  arch-hpet.ads  arch-idt.adb  arch-idt.ads  arch-interrupts-asm.S  arch-interrupts.adb  arch-interrupts.ads  arch-interruptthunks.S  arch-invlpg.adb  arch-invlpg.ads  arch-ioports.adb  arch-ioports.ads  arch-local.ads  arch-mmu.ads  arch-msr.adb  arch-msr.ads  arch-pci.ads  arch-pit.adb  arch-pit.ads  arch-power.adb  arch-power.ads  arch-snippets.ads  arch-stivale2.adb  arch-stivale2.ads  arch-syscall.adb  (+6 more)
source/cryptography/: cryptography-aes.adb  cryptography-aes.ads  cryptography-chacha20.adb  cryptography-chacha20.ads  cryptography-md5.adb  cryptography-md5.ads  cryptography-random.adb  cryptography-random.ads  cryptography.ads
source/devices/: devices-bootfb.adb  devices-bootfb.ads  devices-bootmfb.adb  devices-bootmfb.ads  devices-console.adb  devices-console.ads  devices-debug.adb  devices-debug.ads  devices-drive_cache.adb  devices-drive_cache.ads  devices-e9.adb  devices-e9.ads  devices-i6300esb.adb  devices-i6300esb.ads  devices-kernout.adb  devices-kernout.ads  devices-kvm.adb  devices-kvm.ads  devices-loopback.adb  devices-loopback.ads  devices-netinter.ads  devices-nvme.adb  devices-nvme.ads  devices-partitions.adb  devices-partitions.ads  devices-power_buttons.adb  devices-power_buttons.ads  devices-ps2keyboard.adb  devices-ps2keyboard.ads  devices-ps2mouse.adb  devices-ps2mouse.ads  devices-psmouse.adb  devices-psmouse.ads  devices-pty.adb  devices-pty.ads  devices-ramdev.adb  devices-ramdev.ads  devices-random.adb  devices-random.ads  devices-sata.adb  (+10 more)
source/embedded/: devices.adb  entrypoint.adb  lib-innerprint.adb  targetconfig.ads
source/fs/: fs-file.adb  fs-file.ads  fs.adb  fs.ads
source/ipc/: ipc-fifo.adb  ipc-fifo.ads  ipc-filelock.adb  ipc-filelock.ads  ipc-futex.adb  ipc-futex.ads  ipc-pipe.adb  ipc-pipe.ads  ipc-pty.adb  ipc-pty.ads  ipc-shm.adb  ipc-shm.ads  ipc-signalpost.adb  ipc-signalpost.ads  ipc-socket.adb  ipc-socket.ads  ipc.ads
source/lib/: lib-alignment.adb  lib-alignment.ads  lib-atomic.ads  lib-cmdline.adb  lib-cmdline.ads  lib-glue.adb  lib-glue.ads  lib-innerprint.ads  lib-kasan.adb  lib-kasan.ads  lib-messages.adb  lib-messages.ads  lib-panic.adb  lib-panic.ads  lib-runtime.adb  lib-runtime.ads  lib-synchronization.adb  lib-synchronization.ads  lib-time.adb  lib-time.ads  lib-userland_transfer.adb  lib-userland_transfer.ads  lib.adb  lib.ads
source/memory/: memory-allocbindings.c  memory-mmu.adb  memory-mmu.ads  memory-physical.adb  memory-physical.ads  memory-userland_transfer.adb  memory-userland_transfer.ads  memory-virtual.adb  memory-virtual.ads  memory.adb  memory.ads
source/networking/: networking-arp.adb  networking-arp.ads  networking-interfaces.adb  networking-interfaces.ads  networking-ipv4.adb  networking-ipv4.ads  networking-ipv6.adb  networking-ipv6.ads  networking.adb  networking.ads
source/rts/: a-charac.ads  a-chlat1.ads  a-unccon.ads  a-uncdea.ads  ada.ads  i-c.ads  i-cstrin.adb  i-cstrin.ads  interfac.ads  s-atacco.ads  s-atoope.ads  s-image.adb  s-image.ads  s-imgint.adb  s-imgint.ads  s-imglli.adb  s-imglli.ads  s-imgllli.adb  s-imgllli.ads  s-imgllu.adb  s-imgllu.ads  s-imguns.adb  s-imguns.ads  s-maccod.ads  s-stoele.adb  s-stoele.ads  s-unstyp.ads
source/standard/: entrypoint.adb  lib-innerprint.adb  targetconfig.ads
source/userland/: userland-corefile.adb  userland-corefile.ads  userland-elf.adb  userland-elf.ads  userland-integrity.adb  userland-integrity.ads  userland-loader.adb  userland-loader.ads  userland-mac.adb  userland-mac.ads  userland-memory_failure.adb  userland-memory_failure.ads  userland-memory_locations.ads  userland-oom_failure.adb  userland-oom_failure.ads  userland-power_events.adb  userland-power_events.ads  userland-process.adb  userland-process.ads  userland-scheduler.adb  userland-scheduler.ads  userland-syscall.adb  userland-syscall.ads  userland.adb  userland.ads
source/vfs/: vfs-dev.adb  vfs-dev.ads  vfs-device.adb  vfs-device.ads  vfs-ext.adb  vfs-ext.ads  vfs-fat.adb  vfs-fat.ads  vfs-fat32.adb  vfs-fat32.ads  vfs-file.adb  vfs-file.ads  vfs-path.adb  vfs-path.ads  vfs-pipe.adb  vfs-pipe.ads  vfs-qnx.adb  vfs-qnx.ads  vfs-ustar.adb  vfs-ustar.ads  vfs.adb  vfs.ads
source/virtualization/: virtualization-vcpu.adb  virtualization-vcpu.ads  virtualization-vm.adb  virtualization-vm.ads  virtualization.adb  virtualization.ads
test/: limine.cfg
tests/: cryptography_tests.adb  cryptography_tests.ads  ironclad_tests.gpr  lib_tests.adb  lib_tests.ads  main.adb
(+323 files in other folders)
